--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "immer": "^9.0.2",
     "immutable": "^4.0.0-rc.12",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "redux": "4.0"
   }
 }
