--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immer": "^9.0.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.21",
-    "redux": "4.0"
+    "redux": "4.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
