--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
     "immer": "^9.0.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.21",
