--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "immer": "^9.0.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "redux": "4.0",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.0.0"
