--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "@types/jest": "^26.0.23",
+    "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "webpack": "4.41.6",
